--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vitest": "^4.0.15"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   }
 }
