--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-barcode": "^1.6.1",
+    "react-day-picker": "^9.11.3",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "sonner": "^2.0.7",
