--- a/.gitignore
+++ b/.gitignore
@@ -21,23 +21,37 @@
 /build
 
 # misc
-.DS_Store
-*.pem
+/lib/generated/prisma
 
-# debug
+# local env files
+*.env
+.env
+.env*.local
+
+# logs
+server_log.txt
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# sqlite
+*.db
+*.db-journal
+/prisma/*.db
+/prisma/*.db-journal
 
-# vercel
-.vercel
+# system
+.DS_Store
+Thumbs.db
+desktop.ini
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDE/Editor
+.vscode
+.idea
+*.swp
+*.swo
 
-/lib/generated/prisma
+# AI
+.gemini
