--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.26",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
-    "next-auth": "^5.0.0-beta.30",
+    "next": "^16.0.10",
+    "next-auth": "5.0.0-beta.30",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-barcode": "^1.6.1",
-    "react-day-picker": "^9.11.3",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
@@ -42,21 +42,21 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@prisma/client": "^5.22.0",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9",
+    "@types/node": "^20.19.26",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "eslint": "^9.39.1",
     "eslint-config-next": "16.0.5",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "prisma": "^5.22.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.15"
   },
   "prisma": {
