feat: implement complete database protection system
CRITICAL: Protection system to prevent data loss

- Add automatic backup script (backup-db.ts)
- Add safe migration commands (migrate:safe with auto-backup)
- Add comprehensive security protocol documentation
- Add backups directory structure
- Update .gitignore to protect backup files
- Install tsx for TypeScript execution

NEVER AGAIN: Database will NEVER be lost
- All migrations require backup first
- Safe commands in package.json
- Strict protocol documented

RULE: NUNCA, BAJO NINGUNA CIRCUNSTANCIA, SE PUEDEN PERDER DATOS

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ yarn-error.log*
 /prisma/*.db
 /prisma/*.db-journal
 
+# backups (contain sensitive data)
+/backups/
+
 # system
 .DS_Store
 Thumbs.db
