--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "backup": "tsx scripts/backup-db.ts",
+    "migrate:safe": "npm run backup && npx prisma migrate dev",
+    "migrate:create": "npx prisma migrate dev --create-only",
+    "check-db": "tsx scripts/check-db.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -57,6 +61,7 @@
     "jsdom": "^27.3.0",
     "prisma": "^5.22.0",
     "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15"
